# eth-liquidations

./: .env  .gitignore  1q  Cargo.toml  contracts.toml  tests.sh
.github/workflows/: rust.yml
src/: crypto_data.rs  get_aave_users.rs  lib.rs  main.rs  uniswap_pool.rs
src/abi/: aave_oracle.rs  aave_v3_data_provider.rs  aave_v3_pool.rs  chainlink_registry.rs  erc20.rs  ierc20.rs  liquidate_qualified_user.rs  liquidate_user.rs  qualifyuser.rs  wsteth.rs
src/backrun/: anvil_simulator.rs  create_transaction.rs  flashbots.rs  simulation.rs
src/data/: address.rs  chainlink_data.rs  chainlink_feed_map.rs  erc20.rs  token_data_hash.rs  token_price_hash.rs  tokens_by_chain.rs  users_to_track.rs
src/events/: aave_events.rs
src/exchanges/aave_v3/: data.rs  decode_events.rs  events.rs  get_user_api.rs  get_user_from_contract.rs  get_users.rs  update_user.rs  user_data.rs  user_structs.rs
src/exchanges/aave_v3/implementations/: aave_user_data.rs  aave_users_hash.rs
src/interest/: calculate_interest.rs
src/mempool/: decode_new_price.rs  detect_price_update.rs  liquidations.rs  update_token_price.rs
src/utils/: connection_pool.rs  logging.rs  type_conversion.rs
src/validate/: aave_users.rs  user_health_score.rs
tests/: abi_encode.rs  anvil.rs  check_aave_events.rs  health_factor.rs  interest_rates.rs  price_feed.rs  token_data_hash.rs  token_price.rs  token_price_hash.rs  token_user_mapping.rs  update_token_price.rs  update_user.rs  validate_tokens.rs
tests/mocks/: generate_logs.rs  generate_mock_users.rs
