[package]
name = "eth_liquadation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0", features = ["ws"] }
# Ethers' async features rely upon the Tokio async runtime.
tokio = { version = "1.37", features = ["full","macros"] }
# Flexible concrete Error Reporting type built on std::error::Error with customizable Reports
eyre = "0.6"
serde = { version = "1.0", features = ["derive"]}
uniswap-v3-sdk = { version = "0.28.0", features = ["extensions"]}
uniswap-sdk-core = "0.21.0"
once_cell = "1.8"
